# monorepo

./: .gitignore  mise.toml  mkdocs.yml  pyproject.toml  vscode.sh
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.semgrep/: adr-rules.yml
backends/svc-turfoo-ingest/: mise.toml  pyproject.toml
backends/svc-turfoo-ingest/infra/: Dockerfile  compose.yml
backends/svc-turfoo-ingest/turfoo/: cache.py  celery_app.py  exceptions.py  mixins.py  models.py  resources.py  settings.py  tasks.py
docs/: index.md
docs/adr/: 001-import-from-top-level-modules.md  002-docstring-required-sections.md  003-global-variables-and-module-state.md  004-no-mutable-default-arguments.md  005-dataclasses-frozen-and-pure.md  006-prefer-operator-module.md  007-use-standard-data-formats.md  008-api-deprecation-and-sunset.md  009-follow-api-first-principle.md  010-http-header-standards.md  011-http-methods-usage.md  012-http-status-codes.md  013-hypermedia-and-links.md  014-json-payload-standards.md  015-api-meta-information.md  016-pagination.md  017-api-performance-optimization.md  018-api-security-and-authorization.md  019-url-design-and-resource-naming.md  020-django-vs-fastapi.md  021-django-api-first-openapi.md  022-django-http-header-standards.md  023-django-api-deprecation-sunset.md  024-django-api-performance-optimization.md  025-django-pagination.md  026-docker-volumes-and-bind-mounts.md  027-monorepo-git-workflow-and-Infrastructure.md  028-dockerfile-security-hardening.md
docs/notes/: 001-language-framework-choices.md  002-advanced-architectural-patterns.md
docs/specs/: horse-betting-platform-complete-spec.md  infrastructure-and-workflow.md  infrastructure-scalability.md  nyc-taxi-platform-spec.md
docs/stylesheets/: extra.css
infra/: .env.global  compose.global.yml
infra/templates/: .env.project  Dockerfile  compose.project.yml
projectspaces/: monorepo-core.code-workspace  monorepo-oss.code-workspace  svc-turfoo-ingest.code-workspace
repoctl/: cli.py  enforce_adrs.py  pyproject.toml
repoctl/commands/: __init__.py  adr.py  infra.py
scripts/: cli.py
scripts/commands/: sanity.py
scripts/core/: models.py
scripts/models/: adr.py  note.py
templates/: adr.md.mustache  note.md.mustache
