[project]
name = "monorepo"
version = "0.1.0"
authors = [
  {name = "yjalil", email = "jalil.yahy@gmail.com"}
    ] 
description = "Repo dedicated to general practice and docs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "python-decouple",
    "pystache",
    "pydantic-settings",
    "pytest",
    "mypy",
    "ruff",
    "checkov",
    "commitizen",
    "pre-commit",
    "loguru",
    "python-slugify",
    "click-prompt"
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true
    
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["monorepo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = [
    "repoctl",
]
[project.scripts]
repoctl = "repoctl.cli:cli"

