[project]
name = "monorepo"
version = "0.1.0"
authors = [
  {name = "yjalil", email = "jalil.yahy@gmail.com"}
    ] 
description = "Repo dedicated to general practice and docs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "python-decouple",
    "pystache",
    "pydantic-settings",
    "pytest",
    "mypy",
    "ruff",
    "checkov",
    "commitizen",
    "pre-commit",
    "loguru",
    "python-slugify",
    "click-prompt",
    "semgrep",
    "mkdocs",
    "mkdocs-material",
    "feedparser",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true
    
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "D",   # pydocstyle (Google docstrings)
    "C90", # mccabe complexity
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific
    "G",   # flake8-logging-format (no f-strings in logging) <<< ONLY NEW LINE
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["monorepo"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = [
    "repoctl",
]
[project.scripts]
repoctl = "repoctl.cli:cli"
sem = "repoctl.enforce_adrs:cli"